fixed spacing between header an dbody

--- a/src/sections/about/styles/about.scss
+++ b/src/sections/about/styles/about.scss
@@ -12,7 +12,7 @@
         max-width: 580px;
         text-align: center;
         color: hsl(228, 39%, 23%);
-        padding: 40px 0;
+        padding: 40px 0 10px 0;
         h2{
             font-size: 30px;
             line-height: 1.3;
